# turtlebot2i

turtlebot2i_apps/turtlebot2i_apps/: CMakeLists.txt  package.xml
turtlebot2i_apps/turtlebot2i_arm_director/launch/: named_pose_director.launch
turtlebot2i_apps/turtlebot2i_arm_director/src/: named_pose_director.cpp
turtlebot2i_apps/turtlebot2i_block_manipulation/: CMakeLists.txt
turtlebot2i_apps/turtlebot2i_block_manipulation/config/: turtlebot2i_arm_grasp_data.yaml  (+1 more)
turtlebot2i_apps/turtlebot2i_marker_manipulation/: CMakeLists.txt
turtlebot2i_bringup/launch/: dual_3dsensor.launch  rtabmap.launch
turtlebot2i_control/config/: turtlebot2i_control.yaml  turtlebot2i_controllers_manager.yaml
turtlebot2i_control/launch/: turtlebot2i_control.launch
turtlebot2i_description/launch/: turtlebot2i.launch  view_model.launch
turtlebot2i_description/robots/: kobuki_interbotix_astra.urdf.xacro  kobuki_interbotix_zr300.urdf.xacro
turtlebot2i_description/rviz/: model.rviz
turtlebot2i_description/urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro
turtlebot2i_gazebo/launch/: turtlebot2i_gazebo_demo.launch  turtlebot_world.launch
turtlebot2i_moveit_config/: .setup_assistant  package.xml
turtlebot2i_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  turtlebot.srdf
turtlebot2i_moveit_config/launch/: planning_context.launch  trajectory_execution.launch.xml  turtlebot2i_planning_execution.launch  turtlebot_moveit_controller_manager.launch.xml  warehouse.launch
(+19 files in other folders)
